# cursed_datatypes

./: README.md  setup.cfg
cursed_datatypes/: __init__.py  cursed_datatypes.py
cursed_datatypes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: demo_cursed_list.ipynb
src/: cursed_datatypes.py
src/cursed_datatypes.egg-info/: PKG-INFO  SOURCES.txt
