[metadata]
name = cursed-datatypes
version = 0.1.0
author = Luke Roantree
author_email = luke@roantree.com
description = "list & tuple datatypes alowing floating point indices and slices"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lukeroantree4815162342/cursed_datatypes/
project_urls =
    Bug Tracker = https://github.com/lukeroantree4815162342/cursed_datatypes/issues/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
